--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -45,4 +45,5 @@ base64 = "0.12.3"
 hex = "0.4.2"
 
 sha2 = { version = "0.9.1", default-features = false }
+primitive-types = { version = "0.9.0", default-features = false }
 
