--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -43,7 +43,7 @@ bincode2 = "2.0.1"
 subtle = { version = "2.2.3", default-features = false }
 base64 = "0.12.3"
 hex = "0.4.2"
-
 sha2 = { version = "0.9.1", default-features = false }
 primitive-types = { version = "0.9.0", default-features = false }
+twox-hash = "1.6.0"
 
