registered accounts list

--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -29,6 +29,7 @@ overflow-checks = true
 [features]
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
+default = ["debug-print"]
 backtraces = ["cosmwasm-std/backtraces"]
 debug-print = ["cosmwasm-std/debug-print"]
 
