--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fardels"
-version = "0.1.0"
-authors = ["Ben Adams <darwinzero@gmail.com>"]
+version = "0.2.0"
+authors = ["Ben Adams <fardels@protonmail.com>"]
 edition = "2018"
 
 exclude = [
